SigmaCodebackup3rdSep/objects/StockAdjustment__c.object
<CustomObject>
    <fields>
        <fullName>Adjust_Type__c</fullName>
        <label>Adjust Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Increase Stock</fullName>
                </value>
                <value>
                    <fullName>Reduce Stock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adjusted_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Adjusted Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Authorized_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorized By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stock_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Available_Inventory__c</fullName>
        <formula>Inventory_Location_Product__r.Net_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Vendor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Difference_in_Qty__c</fullName>
        <formula>Original_Qty__c  -  Adjusted_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference in Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ILPName__c</fullName>
        <formula>Inventory_Location_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ILPName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product</label>
        <referenceTo>Inventory_Location_Product__c</referenceTo>
        <relationshipLabel>Stock Adjustments</relationshipLabel>
        <relationshipName>Stock_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Qty__c</fullName>
        <label>Original Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Inventory_Location_Product__r.Products__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <inlineHelpText>Select the reason for stock adjustment</inlineHelpText>
        <label>Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expired Stocks</fullName>
                </value>
                <value>
                    <fullName>Damaged Stocks</fullName>
                </value>
                <value>
                    <fullName>Missing Stocks</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>New Stock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>Used for Sigma Finance</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Stock Adjustments</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Stock Adjustment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>restricted_negative</fullName>
        <active>false</active>
        <errorConditionFormula>Adjusted_Qty__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Adjusted_Qty__c</errorDisplayField>
        <errorMessage>please enter the valid number</errorMessage>
    </validationRules>
</CustomObject>